Facing layout issues with part 3. 90% complete

--- a/assignment-4/styles/layout3.css
+++ b/assignment-4/styles/layout3.css
@@ -28,21 +28,37 @@ nav {
 footer {
   grid-area: 8 / 1 / 9 / 13;
   text-align: center;
-  padding-top: 10px;
+  padding-top: 15px;
 }
 
-.content {
-  
-  grid-area: 2 / 1 / 4 / 13;
+.banner {
+  grid-area: 2 / 1 / 5 / 13; 
+  /* row: 2 to 5, col: 1 to 13 */
+  padding : 40px;
 }
-.gallery {
-  background: white;
-  display: grid;
-  grid-area: 4/1 / 8/13;
-  grid-template-columns: repeat(3, auto);
-  gap: 10px;
+
+.title{
+display: grid;
+grid-template-columns: repeat(2,auto);
+/* grid-area: 5/x 6/x; */
+grid-row: 5/6;
+justify-content: space-around;
+gap:15px;
 }
-.exhibit {
-  background: silver;
-  size: auto;
+
+
+.posts{
+  /* container for posts */
+  display : grid;
+  grid-area:  6/1 / 8/7;
+  grid-template-columns: auto;
+  gap: 15px;
+}
+
+.products{
+  /* container for products */
+  display : grid;
+  grid-area:  6/7 / 8/13;
+  grid-template-columns: auto;
+  gap: 15px;
 }
